# media-assistant

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: test.yml
article-no-sources/: sample.md
src/: __init__.py  main.py  pipeline.py
src/agents/: __init__.py  article_topic_extractor.py  crewai_research_agent.py  editor_agent.py  humanizer_agent.py  research_agent.py  sources_formatter_agent.py  writer_agent.py
src/config/: templates.yaml  tones.yaml
src/utils/: ai_patterns.py  cache.py  config_loader.py  context_gatherer.py  env.py  exceptions.py  formatter.py  llm.py  logger.py  retry.py  search.py  validation.py  xml_parser.py
tests/: conftest.py
tests/agents/: test_humanizer_agent.py  test_research_agent.py
tests/fixtures/: mock_responses.py  sample_data.py
tests/integration/: test_end_to_end.py  test_pipeline.py
tests/unit/: test_config_loader.py  test_env.py  test_formatter.py  test_retry.py  test_search_providers.py  test_validation.py
